--- a/ex.html
+++ b/ex.html
@@ -24,7 +24,7 @@
             <div class="flex flex-col w-64">
                 <div class="flex flex-col flex-grow pt-5 overflow-y-auto bg-white border-r">
                     <div class="flex flex-col flex-shrink-0 px-4">
-                        <a class="text-lg font-semibold tracking-tighter text-black focus:outline-none focus:ring "
+                        <a class="text-lg font-semibold tracking-tighter text-purple-600 focus:outline-none focus:ring "
                             href="/">
                             <span class="inline-flex items-center gap-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-purple-500 rounded-full" viewBox="0 0 24 24">
