--- a/ex.html
+++ b/ex.html
@@ -18,8 +18,21 @@
 </head>
 
 <body>
+    <nav
+        class="md:mr-auto md:py-1 md:pl-4 md:border-l md:border-gray-400 font-medium text-xl flex flex-wrap items-center justify-center">
+        <a href="#" class="mr-5 hover:text-gray-900">DSA</a>
+        <a href="#" class="mr-5 hover:text-gray-900">Operating System</a>
+        <a href="#" class="mr-5 hover:text-gray-900">Computer Networks</a>
+        <a href="#" class="mr-5 hover:text-gray-900">Aptitude</a>
+        <a href="#" class="mr-5 hover:text-gray-900">C</a>
+        <a href="#" class="mr-5 hover:text-gray-900">C++</a>
+        <a href="#" class="mr-5 hover:text-gray-900">JAVA</a>
+        <a href="#" class="mr-5 hover:text-gray-900">Python</a>
+        <span
+            class="inline-flex items-center bg-purple-500  text-white border-0 py-1 px-3 focus:outline-none hover:bg-purple-200 rounded text-base mt-4 md:mt-0">User Name</span>
+    </nav>
 
-    <div class="flex h-screen overflow-hidden bg-white">
+    <div class="flex overflow-hidden bg-white">
         <div class="hidden md:flex md:flex-shrink-0">
             <div class="flex flex-col w-64">
                 <div class="flex flex-col flex-grow pt-5 overflow-y-auto bg-white border-r">
@@ -27,7 +40,9 @@
                         <a class="text-lg font-semibold tracking-tighter text-purple-600 focus:outline-none focus:ring "
                             href="/">
                             <span class="inline-flex items-center gap-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-purple-500 rounded-full" viewBox="0 0 24 24">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor"
+                                    stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    class="w-10 h-10 text-white p-2 bg-purple-500 rounded-full" viewBox="0 0 24 24">
                                     <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
                                 </svg>
 
