--- a/ex.html
+++ b/ex.html
@@ -726,6 +726,8 @@
             </div>
 
         </div>
+
+        <div class="border-5 border-red-400  w-96 h-96 ">afafasfas</div>
 </body>
 
 </html>
